--- a/apps/storybook-angular/app/src/styles.scss
+++ b/apps/storybook-angular/app/src/styles.scss
@@ -2,3 +2,19 @@ body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande',
     'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
+
+$drag-transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+
+.cdk-drop-list-dragging .cdk-drag:not(.cdk-drag-preview),
+.cdk-drag-placeholder,
+.cdk-drag-animating {
+  transition: $drag-transition;
+}
+
+.cdk-drop-list-dragging .cdk-drag:not(.cdk-drag-preview) {
+  pointer-events: none;
+}
+
+.cdk-drag-placeholder {
+  opacity: 20%;
+}
