--- a/apps/storybook-angular/app/src/app/app.component.html
+++ b/apps/storybook-angular/app/src/app/app.component.html
@@ -1,19 +1,3 @@
-<lib-button></lib-button>
-
-<div
-  [id]="'example'"
-  cdkDropList
-  cdkDropListGroup
-  cdkScrollable
-  cdkDropListAutoScrollStep="5"
-  cdkDropListOrientation="vertical"
-  [cdkDropListData]="exampleData"
-  class="list">
-  <ng-container *ngFor="let ex of exampleData; let i = index">
-    <div cdkDrag [cdkDragData]="ex" cdkDragBoundary=".list" cdkDragLockAxis="y">
-      <article class="list-item">
-        {{ ex.name }}
-      </article>
-    </div>
-  </ng-container>
+<div class="editor-container">
+  <lib-react-editor></lib-react-editor>
 </div>
