--- a/apps/storybook-angular/app/src/app/app.component.scss
+++ b/apps/storybook-angular/app/src/app/app.component.scss
@@ -1,8 +1,4 @@
-.list {
-  background: lightblue;
-  padding: 20px;
-}
-
-.list-item {
-  padding: 10px 0;
+.editor-container {
+  height: 100vh;
+  width: 100%;
 }
