(Imp) Angular/Demo: Add variable examples and onmount call to test everything

--- a/apps/storybook-angular/app/src/app/app.component.html
+++ b/apps/storybook-angular/app/src/app/app.component.html
@@ -1,3 +1,5 @@
 <div class="editor-container">
-  <lib-react-editor></lib-react-editor>
+  <lib-react-editor
+    [editorConfig]="editorConfig"
+    (editorMount)="editor = $event" />
 </div>
