--- a/apps/storybook-angular/app/src/app/app.component.html
+++ b/apps/storybook-angular/app/src/app/app.component.html
@@ -1,5 +1,4 @@
 <div class="editor-container">
-  <lib-react-editor
-    [editorConfig]="editorConfig"
-    (editorMount)="editor = $event" />
+  <button class="btn btn-dark" (click)="manualExport()">Exportar</button>
+  <lib-react-editor [editorConfig]="editorConfig" />
 </div>
