--- a/packages/ui-react/src/components/editor/styles.module.css
+++ b/packages/ui-react/src/components/editor/styles.module.css
@@ -2,10 +2,16 @@
   @apply hidden;
 }
 
-/* Necessary fix because slickgrid conflicts with faulty naming class inside editor. "row" is used instead of "flex-row". */
+.tl-text-shadow {
+  text-shadow: none;
+}
+
+/* Necessary fix because material tailwindhas faulty naming class inside editor conflicting with tons of other libraries using .row class. "row" is used instead of "flex-row". */
 /* See https://github.com/creativetimofficial/material-tailwind/issues/512 */
 
-.row {
+/* TODO: Move this to lighthousefeed styles */
+
+/* .row {
   margin: unset;
 }
 
@@ -13,4 +19,4 @@
   margin: unset;
   display: unset;
   width: unset;
-}
+} */
