(All): Changelog and configs

--- a/apps/storybook-angular/app/src/app/app.component.html
+++ b/apps/storybook-angular/app/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div class="editor-container">
-  <button class="btn btn-dark" (click)="manualExport()">Exportar</button>
+  <!-- <button class="btn btn-dark" (click)="manualExport()">Exportar</button> -->
   <lib-react-editor [editorConfig]="editorConfig" />
 </div>
