--- a/packages/ui-react/src/components/editor/styles.module.css
+++ b/packages/ui-react/src/components/editor/styles.module.css
@@ -9,9 +9,7 @@
 /* Necessary fix because material tailwindhas faulty naming class inside editor conflicting with tons of other libraries using .row class. "row" is used instead of "flex-row". */
 /* See https://github.com/creativetimofficial/material-tailwind/issues/512 */
 
-/* TODO: Move this to lighthousefeed styles */
-
-/* .row {
+.row {
   margin: unset;
 }
 
@@ -19,4 +17,4 @@
   margin: unset;
   display: unset;
   width: unset;
-} */
+}
