(All): Several bug fixes

--- a/apps/storybook-angular/app/src/app/app.component.html
+++ b/apps/storybook-angular/app/src/app/app.component.html
@@ -1,4 +1,8 @@
 <div class="editor-container">
   <!-- <button class="btn btn-dark" (click)="manualExport()">Exportar</button> -->
-  <lib-react-editor [editorConfig]="editorConfig" />
+  <!-- <lib-react-editor [editorConfig]="editorConfig" /> -->
+  <span #hexValue></span>
+  <lib-react-color-picker
+    color="#fff"
+    (colorChange)="hexValue.innerText = $event" />
 </div>
